<resources>
    <string name="label_playing_movies">Reproduciendoce Ahora</string>
    <string name="label_popular_movies">Peliculas Populares</string>
    <string name="label_top_rated_movies">Mejor Calificadas</string>
    <string name="user_name">Nombre Completo</string>
    <string name="required_field">Campo requerido</string>
    <string name="user_phone">Teléfono</string>
    <string name="user_address">Direción</string>
    <string name="user_mail">Correo</string>
    <string name="guardar_usuario">Guardar usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Peliculas</string>
    <string name="maps">Maps</string>
    <string name="upload_images">Cargar Imagenes</string>
    <string name="users">Usuarios</string>
    <string name="worker">Obteniendo ubicación</string>
    <string name="app_name">Movies</string>
    <string name="save_image">Guardar Imagen</string>
    <string name="close">Cerrar</string>
    <string name="register">Registrar Usuario</string>
    <string name="full_name">%d. %s</string>
    <string name="save_image_success">La imagen fue guardada con exito</string>
    <string name="save_image_success_error">Error al intentar cargar la imagen</string>
    <string name="get_movies_error">Error al tratar de obtener las películas</string>
</resources>