<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.registry.RegistryUserFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="800dp">
                <ImageView
                    android:id="@+id/imagen"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_user"/>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lay_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                app:helperText="@string/required_field"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"
                app:layout_constraintTop_toBottomOf="@id/card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lay_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_phone"
                app:helperText="@string/required_field"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"
                app:layout_constraintTop_toBottomOf="@id/lay_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/telefono"
                    android:layout_width="match_parent"
                    android:inputType="numberSigned"
                    android:layout_height="wrap_content"
                    android:maxLength="10"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lay_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_mail"
                app:helperText="@string/required_field"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"
                app:layout_constraintTop_toBottomOf="@id/lay_telefono">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lay_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_address"
                app:helperText="@string/required_field"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"
                app:layout_constraintTop_toBottomOf="@id/lay_correo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lay_direccion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:background="@color/blue_dark"
                android:textColor="@color/white"
                android:paddingHorizontal="20dp"
                android:text="@string/guardar_usuario"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>